--- a/templates/partial/friends-preview-view.html
+++ b/templates/partial/friends-preview-view.html
@@ -1,8 +1,8 @@
 <!-- Friends Preview -->
-<section class="box style1" ng-controller="FriendsController">
+<section class="box style1">
     <div class="row">
         <div class="12u">
-            Friends - <a href="#/friends">{{friendsData.length}}</a> total
+            Friends - <a href="#/:username/friends">{{friendsData.length}}</a> total
         </div>
     </div>
     <div class="row">
