Create user authorisation for friends preview

--- a/templates/user/friends-view.html
+++ b/templates/user/friends-view.html
@@ -9,7 +9,7 @@
     <article class="container">
         <div class="12u">
             <header>
-                <h1>{{myData.name}} - Friends ({{friendsData.length}} total)</h1>
+                <h1>{{userData.name}} - Friends ({{friendsData.length}} total)</h1>
             </header>
             <div class="12u">
                 <div class="box style1 4u 12u(mobile)" ng-repeat="friend in friendsData">
