--- a/templates/partial/friends-preview-view.html
+++ b/templates/partial/friends-preview-view.html
@@ -2,7 +2,9 @@
 <section class="box style1">
     <div class="row">
         <div class="12u">
-            Friends - <a href="#/:username/friends">{{friendsData.length}}</a> total
+            Friends -
+            <a href="#/{{userData.username || myData.username}}/friends">
+                {{friendsData.length}}</a> total
         </div>
     </div>
     <div class="row">
