--- a/templates/user/user-view.html
+++ b/templates/user/user-view.html
@@ -5,7 +5,7 @@
 <div ng-include="'templates/partial/header-view.html'"></div>
 
 <!-- User Wall -->
-<div class="wrapper style1 first" ng-if="isLoggedIn" ng-init="loadUserFullData()">
+<div class="wrapper style1 first" ng-if="isLoggedIn">
     <article class="container" id="top">
         <section class="box style1" ng-style="{'background-image':'url(' + userData.coverImageData + ')'}">
             <div class="row" >
@@ -14,12 +14,13 @@
                 </div>
                 <div class="8u">
                     <h1>{{userData.name}}</h1>
-                    <input ng-if="!userData.isFriend && userData.username != myData.username" type="button" value="Friend"/>
+                    <input ng-if="!userData.isFriend && userData.username != myData.username"
+                           type="button" value="Friend" ng-click="sendFriendRequest()"/>
                 </div>
             </div>
         </section>
         <div class="row">
-            <div class="4u">
+            <div class="4u" >
                 <div class="row" ng-if="userData.isFriend || userData.username == myData.username">
                     <div class="12u">
                         <section class="box style1">
@@ -42,8 +43,7 @@
                         </section>
                     </div>
                 </div>
-                <!-- todo get user friends preview-->
-                <div class="row">
+                <div class="row" ng-if="userData.isFriend || userData.username == myData.username">
                     <div class="12u" ng-include="'templates/partial/friends-preview-view.html'"></div>
                 </div>
             </div>
