--- a/templates/partial/friends-preview-view.html
+++ b/templates/partial/friends-preview-view.html
@@ -1,10 +1,10 @@
 <!-- Friends Preview -->
-<section class="box style1" ng-init="loadFriends()">
+<section class="box style1" ng-init="loadFriendsPreview()">
     <div class="row">
         <div class="12u">
             Friends -
             <a href="#/{{userData.username || myData.username}}/friends">
-                {{friendsData.length}}</a> total
+                {{friendsData.totalCount}}</a> total
         </div>
     </div>
     <div class="row">
