--- a/templates/partial/friends-preview-view.html
+++ b/templates/partial/friends-preview-view.html
@@ -4,7 +4,7 @@
         <div class="12u">
             Friends -
             <a href="#/{{userData.username || myData.username}}/friends">
-                {{friendsData.totalCount}}</a> total
+                {{friendsDataTotalCount}}</a> total
         </div>
     </div>
     <div class="row">
