--- a/templates/partial/posts-view.html
+++ b/templates/partial/posts-view.html
@@ -2,7 +2,7 @@
 <section class="box style1" ng-repeat="data in feedData">
     <div class="row">
         <div class="4u">
-            <img ng-src="{{data.author.profileImageData}}"/>
+            <img class="thumb-image" ng-src="{{data.author.profileImageData}}"/>
         </div>
         <div class="8u">
             <div class="row">
