--- a/templates/user/edit-profile-view.html
+++ b/templates/user/edit-profile-view.html
@@ -1,5 +1,5 @@
-<!-- Head -->
-<div ng-include="'templates/partial/head.html'"></div>
+<!-- Title -->
+<title ng-bind="title"></title>
 
 <!-- Header -->
 <div ng-include="'templates/partial/header-view.html'"></div>
