--- a/templates/user/friends-view.html
+++ b/templates/user/friends-view.html
@@ -1,5 +1,5 @@
-<!-- Head -->
-<div ng-include="'templates/partial/head.html'"></div>
+<!-- Title -->
+<title ng-bind="title"></title>
 
 <!-- Header -->
 <div ng-include="'templates/partial/header-view.html'"></div>
@@ -10,7 +10,7 @@
     <article class="container">
         <div class="12u">
             <header>
-                <h1>{{userData.name}} - Friends ({{friendsData.totalCount}} total)</h1>
+                <h1>{{userData.name}} - Friends ({{friendsDataTotalCount}} total)</h1>
             </header>
             <div class="12u">
                 <section class="4u box style1" ng-repeat="friend in friendsData">
