--- a/templates/partial/posts-view.html
+++ b/templates/partial/posts-view.html
@@ -1,39 +1,41 @@
 <!-- User Posts -->
-<section class="box style1" ng-repeat="data in feedData">
+<section class="box style1" ng-repeat="post in feedData">
     <div class="row">
         <div class="4u">
-            <a href="#/{{data.author.username}}">
-                <img class="thumb-image" title="{{data.author.name}}" ng-src="{{data.author.profileImageData}}"/>
+            <a href="#/{{post.author.username}}">
+                <img class="thumb-image" title="{{post.author.name}}" ng-src="{{post.author.profileImageData}}"/>
             </a>
         </div>
         <div class="8u">
             <div class="row">
                 <div class="8u">
-                    <a href="#/{{data.author.username}}" title="{{data.author.name}}">
-                        {{data.author.name}}
+                    <a href="#/{{post.author.username}}" title="{{post.author.name}}">
+                        {{post.author.name}}
                     </a>
                 </div>
             </div>
             <div class="row">
                 <div class="8u">
-                    {{data.date | date:'dd MMM yyyy HH:mm:ss'}}
+                    {{post.date | date:'dd MMM yyyy HH:mm:ss'}}
                 </div>
             </div>
         </div>
     </div>
     <div class="row">
         <div class="12u">
-            {{data.postContent}}
+            {{post.postContent}}
         </div>
     </div>
     <div class="row">
         <div class="6u">
-            {{data.likesCount}}
-            <a class="icon fa-thumbs-o-up"> Like</a>
+            {{post.likesCount}}
+            <a href="" class="icon {{!post.liked && 'fa-thumbs-o-up' || 'fa-thumbs-o-down'}}"
+               ng-click="post.liked = !post.liked; !post.liked && unlikePost(post); post.liked && likePost(post);">
+                {{!post.liked && 'Like' || 'Unlike'}}</a>
         </div>
         <div class="6u">
-            {{data.totalCommentsCount}}
-            <a class="icon fa-comments-o"> Comment</a>
+            {{post.totalCommentsCount}}
+            <a href="" class="icon fa-comments-o"> Comment</a>
         </div>
     </div>
 </section>
