--- a/templates/user/user-view.html
+++ b/templates/user/user-view.html
@@ -23,7 +23,7 @@
             <div class="4u" >
                 <div class="row" ng-if="userData.isFriend || userData.username == myData.username">
                     <div class="12u">
-                        <section class="box style1">
+                        <section class="box style1" ng-controller="PostController">
                             <form name="postForm">
                                 <div class="row">
                                     <div class="12u">
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div ng-include="'templates/partial/posts-view.html'" class="8u" ng-infinite-scroll="loadWallFeed()"
-                 ng-infinite-scroll-disabled="wallFeedBusy" ng-infinite-scroll-distance="0">
+                 ng-infinite-scroll-disabled="wallFeedBusy" ng-infinite-scroll-distance="0" ng-controller="PostController">
             </div>
         </div>
     </article>
