Create comment view template and import it at post view

--- a/templates/partial/posts-view.html
+++ b/templates/partial/posts-view.html
@@ -65,65 +65,5 @@
                ng-click="expandNewCommentTextarea(post.id)"> Comment</a>
         </div>
     </div>
-    <div class="row" ng-if="isNewCommentTextareaExpanded && commentPostId == post.id" ng-controller="CommentController">
-        <div class="12u">
-            <form name="newCommentForm">
-                <div class="row">
-                    <div class="6u">
-                        <textarea name="newComment" id="newComment" required placeholder="Comment..."
-                                  ng-model="commentData.commentContent"></textarea>
-                    </div>
-                    <div class="6u">
-                        <input type="button" ng-disabled="!newCommentForm.$valid" value="Comment"
-                               ng-click="createComment(post, commentData); expandNewCommentTextarea(post.id)"/>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
-    <br/>
-    <article class="box style1" ng-repeat="comment in post.comments" ng-controller="CommentController">
-        <div class="row">
-            <div class="4u">
-                <a href="#/{{comment.author.username}}">
-                    <img class="thumb-image" title="{{comment.author.name}}"
-                         ng-src="{{comment.author.profileImageData}}"/>
-                </a>
-            </div>
-            <div class="8u">
-                <div class="row">
-                    <div class="8u">
-                        <a href="#/{{comment.author.username}}" title="{{comment.author.name}}">
-                            {{comment.author.name}}
-                        </a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="8u">
-                        {{comment.date | date:'dd MMM yyyy HH:mm:ss'}}
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="12u">
-                {{comment.commentContent}}
-            </div>
-        </div>
-        <div class="row">
-            <div class="12u">
-                {{comment.likesCount}}
-                <span ng-if="!authorisationSecurity(post)"> Likes</span>
-                <a href="" class="icon {{!comment.liked && 'fa-thumbs-o-up' || 'fa-thumbs-o-down'}}"
-                   ng-if="authorisationSecurity(post)"
-                   ng-click="comment.liked = !comment.liked; !comment.liked && unlikeComment(post, comment); comment.liked && likeComment(post, comment);">
-                    {{!comment.liked && 'Like' || 'Unlike'}}</a>
-            </div>
-        </div>
-    </article>
-    <div class="row" ng-if="isMoreButtonVisible && post.totalCommentsCount > 3" ng-controller="CommentController">
-        <div class="12u">
-            <input type="button" value="More" ng-click="loadComments(post); hideMoreButton();"/>
-        </div>
-    </div>
+    <div ng-include="'templates/partial/comment-view.html'" ng-controller="CommentController"></div>
 </section>
