--- a/templates/partial/comment-view.html
+++ b/templates/partial/comment-view.html
@@ -45,13 +45,34 @@
         </div>
     </div>
     <div class="row">
-        <div class="12u">
+        <div class="4u">
             {{comment.likesCount}}
             <span ng-if="!authorisationSecurity(post)"> Likes</span>
             <a href="" class="icon {{!comment.liked && 'fa-thumbs-o-up' || 'fa-thumbs-o-down'}}"
                ng-if="authorisationSecurity(post)"
                ng-click="comment.liked = !comment.liked; !comment.liked && unlikeComment(post, comment); comment.liked && likeComment(post, comment);">
                 {{!comment.liked && 'Like' || 'Unlike'}}</a>
+        </div>
+        <div class="4u" ng-if="comment.author.username == myData.username">
+            <a href="" class="icon fa-edit" ng-click="expandEditCommentTextarea(comment.id)"> Edit</a>
+        </div>
+        <div class="4u" ng-if="(post.wallOwner.username == myData.username) || (comment.author.username == myData.username)">
+            <a href="" class="icon fa-eraser" ng-click="deleteComment(post, comment)"> Delete</a>
+        </div>
+    </div>
+    <div class="row" ng-if="isEditCommentTextareaExpanded && editCommentId == comment.id">
+        <div class="12u">
+            <form name="editCommentForm">
+                <div class="row">
+                    <div class="6u">
+                        <textarea name="comment" id="comment" required ng-model="comment.commentContent"></textarea>
+                    </div>
+                    <div class="6u">
+                        <input type="button" ng-disabled="!editCommentForm.$valid" value="Edit Comment"
+                               ng-click="editComment(post, comment)"/>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
 </article>
