--- a/css/style.css
+++ b/css/style.css
@@ -610,6 +610,18 @@
 			box-shadow: inset 0px 0px 0px 1px rgba(0,0,0,0.15), 0px 2px 3px 0px rgba(0,0,0,0.1);
 			text-align: center;
 		}
+		.box-radius
+		{
+			border-radius: 20px;
+		}
+
+	/* Popup */
+
+		.ng-popup {
+			border-radius: 20px;
+			display:none;
+			position:absolute;
+		}
 
 /*********************************************************************************/
 /* Icons                                                                         */
@@ -670,6 +682,11 @@
 		border: 1px solid #2a2a2a;
 		border-radius: 10px;
 		background-color: #2a2a2a;
+	}
+
+	.friend-link:hover
+	{
+		background-color: rgba(154, 154, 154, 0.09);
 	}
 
 /*********************************************************************************/
